
[workspace]
resolver = "2"
members = [
    "context",
    "service",
    "cassie-cool",
    "runtime",
    "ext/http",
    "ext/net",
    "ext/fetch",
    "ext/websocket",
    "test_util",
]
exclude = ["test_util/std/hash/_wasm"]
[workspace.package]
name = "deno-cool"
version = "2.0.1"
edition = "2021"
authors = ["Cassie 348040933@qq.com"]
license = "MIT"
repository = "https://gitee.com/stringlxd/deno-cool"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
v8 = { version = "0.73.0", default-features = false }
deno_ast = { version = "0.26.0", features = ["transpiling"] }

deno_core ="0.189.0"
deno_ops ="0.67.0"
serde_v8 = "0.100.0"
deno_runtime = { path = "./runtime" }
deno_lockfile = "0.14.1"
deno_npm = "0.6.0"
deno_semver = "0.2.1"
test_util = { path = "./test_util" }
# exts
deno_broadcast_channel =  "0.101.0"
deno_cache = "0.39.0"
deno_console = "0.107.0"
deno_crypto = "0.121.0"
deno_fetch = { version = "0.131.0", path = "./ext/fetch" }
deno_ffi = "0.94.0"
deno_fs = "0.17.0"
deno_http = { version = "0.102.0", path = "./ext/http" }
deno_io = "0.17.0"
deno_net = { version = "0.99.0", path = "./ext/net" }
deno_node = "0.44.0"
deno_kv = "0.15.0"
deno_tls = "0.94.0"
deno_url = "0.107.0"
deno_web = "0.138.0"
deno_webidl = "0.107.0"
deno_websocket = { version = "0.112.0", path = "./ext/websocket" }
deno_webstorage = "0.102.0"
deno_napi = "0.37.0"
napi_sym = { version = "0.37.0", path = "service/src/napi/sym" }
context ={version = "0.1.0",path = "./context"}

async-channel = "1.8.0"
aes = "=0.8.2"
anyhow = "1.0.57"
async-trait = "0.1.51"
atty = "=0.2.14"
base64 = "=0.13.1"
bencher = "0.1"
bytes = "1.4.0"
cache_control = "=0.2.0"
cbc = { version = "=0.1.2", features = ["alloc"] }
console_static_text = "=0.8.1"
data-url = "=0.2.0"
dlopen = "0.1.8"
encoding_rs = "=0.8.31"
ecb = "=0.1.1"
fastwebsockets = "=0.3.1"
filetime = "0.2.16"
flate2 = "=1.0.24"
fs3 = "0.5.0"
futures = "0.3.21"
glob = "0.3.1"
hex = "0.4"
http = "0.2.9"
httparse = "1.8.0"
hyper = { version = "0.14.26" }
indexmap = { version = "1.9.2", features = ["serde"] }
libc = "0.2.126"
log = "=0.4.17"
lsp-types = "=0.93.2" # used by tower-lsp and "proposed" feature is unstable in patch releases
memmem = "0.1.1"
notify = "=5.0.0"
num-bigint = { version = "0.4", features = ["rand"] }
once_cell = "1.17.1"
os_pipe = "=1.0.1"
parking_lot = "0.12.0"
percent-encoding = "=2.2.0"
pin-project = "1.0.11" # don't pin because they yank crates from cargo
pretty_assertions = "=1.3.0"
rand = "=0.8.5"
regex = "^1.7.0"
lazy-regex = "2.5.0"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "socks"] }
ring = "=0.16.20"
rusqlite = { version = "=0.28.0", features = ["unlock_notify", "bundled"] }
rustls = "0.21.0"
rustls-pemfile = "1.0.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.85"
serde_repr = "=0.1.9"
sha2 = { version = "0.10.6", features = ["oid"] }
signature = "=1.6.4"
slab = "0.4"
smallvec = "1.8"
socket2 = "0.4.7"
tar = "=0.4.38"
tempfile = "3.4.0"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tokio-rustls = "0.24.0"
tokio-util = "0.7.4"
tower-lsp = { version = "=0.17.0", features = ["proposed"] }
url = { version = "2.3.1", features = ["serde", "expose_internals"] }
uuid = { version = "1.3.0", features = ["v4"] }
zstd = "=0.11.2"

# crypto
rsa = { version = "0.7.0", default-features = false, features = ["std", "pem", "hazmat"] } # hazmat needed for PrehashSigner in ext/node
hkdf = "0.12.3"

# macros
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }

# unix
nix = "=0.24.2"

# windows deps
fwdansi = "=1.1.0"
winres = "=0.1.12"
winapi = "=0.3.9"
windows-sys = { version = "0.48.0", features = ["Win32_Media"] }

# NB: the `bench` and `release` profiles must remain EXACTLY the same.
[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size

# Build release with debug symbols: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

# NB: the `bench` and `release` profiles must remain EXACTLY the same.
[profile.bench]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size


# NB: the `bench` and `release` profiles must remain EXACTLY the same.
[profile.release.package.rand]
opt-level = 3
[profile.release.package.flate2]
opt-level = 3
[profile.release.package.brotli]
opt-level = 3
[profile.release.package.miniz_oxide]
opt-level = 3
[profile.release.package.async-compression]
opt-level = 3
[profile.release.package.brotli-decompressor]
opt-level = 3
[profile.release.package.deno_bench_util]
opt-level = 3
[profile.release.package.deno_core]
opt-level = 3
[profile.release.package.deno_runtime]
opt-level = 3
[profile.release.package.deno_http]
opt-level = 3
[profile.release.package.deno_net]
opt-level = 3
[profile.release.package.deno_web]
opt-level = 3
[profile.release.package.deno_crypto]
opt-level = 3
[profile.release.package.deno_node]
opt-level = 3
[profile.release.package.deno_broadcast_channel]
opt-level = 3
[profile.release.package.deno_fetch]
opt-level = 3
[profile.release.package.deno_ffi]
opt-level = 3
[profile.release.package.deno_tls]
opt-level = 3
[profile.release.package.deno_websocket]
opt-level = 3
[profile.release.package.deno_napi]
opt-level = 3
[profile.release.package.test_napi]
opt-level = 3
[profile.release.package.num-bigint-dig]
opt-level = 3
[profile.release.package.v8]
opt-level = 3
[profile.release.package.serde_v8]
opt-level = 3
[profile.release.package.serde]
opt-level = 3
[profile.release.package.deno_url]
opt-level = 3
[profile.release.package.url]
opt-level = 3
[profile.release.package.bytes]
opt-level = 3
[profile.release.package.futures-util]
opt-level = 3
[profile.release.package.hyper]
opt-level = 3
[profile.release.package.tokio]
opt-level = 3
[profile.release.package.zstd]
opt-level = 3
[profile.release.package.zstd-sys]
opt-level = 3
[profile.release.package.base64-simd]
opt-level = 3
