[package]
name = "cassie-cool"
version = "0.1.0"
edition = {workspace = true}
authors =  {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
awc = "3.1.1"
futures-util = { version = "0.3.28", default-features = false, features = ["std"] }
service={path= "../service" }
tokio-stream = "0.1.14"
tokio= {workspace = true}
tokio-util= {workspace = true}
context ={path="../context"}
url= {workspace = true}
rbatis = { version = "4.3"}
rbs = "4.3.2"
rbdc-mysql={version="4.3"}
serde= {workspace = true, features = ["derive"] }
serde_json = {workspace = true }
env_logger = "0.10.0"
log= {workspace = true}
actix-multipart = "0.6.0"
build-fs-tree = "0.6.0"
walkdir = "2"
uuid= {workspace = true}
cached = "0.44.0"
actix-governor = "0.4.1"
deno_runtime = {workspace = true}
deno_core = {workspace = true}
async-channel = {workspace = true}
lazy_static = "1.4.0"
port-selector = "0.1.6"

